Added backend testing, Fixed dashboard refresh on empty/no list, Implemented task.json